# iceberg-parquet-test-generator

./: .gitignore  README.md  generate_docx.py  generate_test_plan_docx.py  pyproject.toml  requirements.txt
.cursor/rules/: coding-conventions.mdc  project-context.mdc
configs/: all-complex-types.json  all-logical-types.json  all-primitive-types.json  golden-dataset-extended.json  iceberg-full-coverage.json  multi-value-types.json  null-scenarios.json
docs/: null-handling.md  parquet-data-types.md  test-plan.md
generator/: __main__.py  cli.py  config_model.py  data_generator.py  parquet_writer.py  pinot_config_generator.py  schema_builder.py
